# opengl-compute-example

./: CMakeLists.txt  README.md  cursor.glsl  main.cpp  shader.frag  shader.vert
